-
Bug
-
Resolution: Done
-
P2: Important
-
Qt Creator 6.0.0-beta2
-
None
-
Windows 10.
Tested with and without the new Clangd enabled.
-
-
4ecb6a9dc067edc2c673aaf343016111cb8d27ff (qt-creator/qt-creator/6.0)
One is unable to add multiple cursors for editing using the keyboard.
Pressing "SHIFT" + "ALT" + "up arrow"/"down arrow" does not add or remove cursors like before (tested to be working in 5.0.2)
Holding in "ALT" and clicking with the mouse still adds multiple cursors.
PS: There are no command on the "Keyboard Shortcuts" options page to configure the command to add cursors with the keyboard (also not present in 5.0.2)