Utils: Allow combining add multi cursor events with shift

The old block selection shortcuts were used with alt + shift + up/down,
but the new multi text cursor were just expecting alt + direction key
for adding new cursors. In order to not break with habbits also ignore
shift modifier when checking for alt + cursor move key events.

Fixes: QTCREATORBUG-26503
Change-Id: I064e666a04b88c3b90d10ea35688613159f7d4a5
Reviewed-by: Christian Stenger <christian.stenger@qt.io>